--- a/src/pages/friends.astro
+++ b/src/pages/friends.astro
@@ -51,7 +51,7 @@ const pageDescription = '与 Misaka Network 互相链接的优秀站点';
                         <li><span class="font-medium">站点名称：</span>Misaka Network</li>
                         <li><span class="font-medium">站点地址：</span>https://blog.misaka-net.top</li>
                         <li><span class="font-medium">站点描述：</span>御坂网络 - 科学实验日志与技术观测站</li>
-                        <li><span class="font-medium">头像地址：</span>https://blog.misaka-net.top/favicon1.svg</li>
+                        <li><span class="font-medium">头像地址：</span>https://blog.misaka-net.top/favicon.svg</li>
                     </ul>
                 </div>
                 <p class="mt-4">
