--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,6 +10,7 @@ import TableOfContents from '../components/TableOfContents.astro';
 import CopyCodeButton from '../components/CopyCodeButton.astro';
 import MermaidRenderer from '../components/MermaidRenderer.astro';
 import MermaidViewer from '../components/MermaidViewer.astro';
+import ScrollProgress from '../components/ScrollProgress.astro';
 
 type Props = CollectionEntry<'blog'>['data'] & {
     prevPost?: CollectionEntry<'blog'>;
@@ -20,6 +21,9 @@ const {title, description, pubDate, updatedDate, heroImage, tags = [], prevPost,
 ---
 
 <Layout title={`${title} - Misaka Network`} description={description}>
+    <!-- 滚动进度条 -->
+    <ScrollProgress />
+
     <!-- Table of Contents -->
     <TableOfContents/>
 
